force-app/main/default/objects/SRInfo__c/SRInfo__c.object-meta.xml
<CustomObject>
    <description>売上明細票CSVの情報を格納するオブジェクト</description>
    <label>SR情報</label>
    <nameField>
        <displayFormat>SR-{YYYYMMDD}-{00000000}</displayFormat>
        <label>SR情報番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>