force-app/main/default/objects/SRInfo__c/fields/ContactPersonName__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonName__c</fullName>
    <label>担当者名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>