force-app/main/default/objects/SRInfo__c/fields/deleteSRFlag__c.field-meta.xml
<CustomField>
    <fullName>deleteSRFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>論理削除フラグ</label>
    <type>Checkbox</type>
</CustomField>