force-app/main/default/objects/SRInfo__c/fields/EntryDate__c.field-meta.xml
<CustomField>
    <fullName>EntryDate__c</fullName>
    <label>取込日</label>
    <type>Date</type>
</CustomField>