force-app/main/default/objects/SRInfo__c/fields/J_Number__c.field-meta.xml
<CustomField>
    <fullName>J_Number__c</fullName>
    <label>J項番号</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>