force-app/main/default/objects/SRInfo__c/fields/Latest_Forecast_SRWC__c.field-meta.xml
<CustomField>
    <fullName>Latest_Forecast_SRWC__c</fullName>
    <label>最終予想WC（最新）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>