force-app/main/default/objects/SRInfo__c/fields/Latest_Forecast_WCRate__c.field-meta.xml
<CustomField>
    <fullName>Latest_Forecast_WCRate__c</fullName>
    <description>最終予想WC（最新） / 最終予想CP（最新）</description>
    <formula>Latest_Forecast_SRWC__c / Latest_Forecast_SRCP__c</formula>
    <label>最終予想WC率（最新）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>