force-app/main/default/objects/SRInfo__c/fields/Latest_SalesDate__c.field-meta.xml
<CustomField>
    <fullName>Latest_SalesDate__c</fullName>
    <label>売上年月日（最新）</label>
    <type>Date</type>
</CustomField>