force-app/main/default/objects/SRInfo__c/fields/Latest_SRCP__c.field-meta.xml
<CustomField>
    <fullName>Latest_SRCP__c</fullName>
    <label>SRCP（最新）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>