force-app/main/default/objects/SRInfo__c/fields/Latest_SRInfoUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>Latest_SRInfoUpdateDate__c</fullName>
    <label>SR情報取得日（最新）</label>
    <type>Date</type>
</CustomField>