force-app/main/default/objects/SRInfo__c/fields/Latest_WCRate__c.field-meta.xml
<CustomField>
    <fullName>Latest_WCRate__c</fullName>
    <description>SRWC（最新） / SRCP（最新）</description>
    <formula>Latest_SRWC__c  /  Latest_SRCP__c</formula>
    <label>SRWC率（最新）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>