force-app/main/default/objects/SRInfo__c/fields/LocationName__c.field-meta.xml
<CustomField>
    <fullName>LocationName__c</fullName>
    <label>場所名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>