force-app/main/default/objects/SRInfo__c/fields/OP_Number__c.field-meta.xml
<CustomField>
    <fullName>OP_Number__c</fullName>
    <description>代表となる売報番号には商談番号が紐づいている</description>
    <label>商談番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>