force-app/main/default/objects/SRInfo__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SR情報</relationshipLabel>
    <relationshipName>Opportunitys</relationshipName>
    <type>Lookup</type>
</CustomField>