force-app/main/default/objects/SRInfo__c/fields/Order_Forecast_SRCP__c.field-meta.xml
<CustomField>
    <fullName>Order_Forecast_SRCP__c</fullName>
    <label>最終予想CP（受注時）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>