force-app/main/default/objects/SRInfo__c/fields/Order_Forecast_WCRate__c.field-meta.xml
<CustomField>
    <fullName>Order_Forecast_WCRate__c</fullName>
    <description>最終予想WC（受注時） / 最終予想CP（受注時）</description>
    <formula>Order_Forecast_SRWC__c / Order_Forecast_SRCP__c</formula>
    <label>最終予想WC率（受注時）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>