force-app/main/default/objects/SRInfo__c/fields/Order_SalesDate__c.field-meta.xml
<CustomField>
    <fullName>Order_SalesDate__c</fullName>
    <label>売上年月日（受注時）</label>
    <type>Date</type>
</CustomField>