force-app/main/default/objects/SRInfo__c/fields/Order_WCRate__c.field-meta.xml
<CustomField>
    <fullName>Order_WCRate__c</fullName>
    <description>SRWC（受注時） / SRCP（受注時）</description>
    <formula>Order_SRWC__c / Order_SRCP__c</formula>
    <label>SRWC率（受注時）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>