force-app/main/default/objects/SRInfo__c/fields/OrderingSource__c.field-meta.xml
<CustomField>
    <fullName>OrderingSource__c</fullName>
    <label>注文元</label>
    <length>255</length>
    <type>Text</type>
</CustomField>