force-app/main/default/objects/SRInfo__c/fields/OrderMonth__c.field-meta.xml
<CustomField>
    <fullName>OrderMonth__c</fullName>
    <formula>IF ( ISBLANK(Order_OrderDate__c), &apos;&apos;, TEXT(YEAR(Order_OrderDate__c)) &amp; &apos;/&apos; &amp;  LPAD(TEXT(MONTH(Order_OrderDate__c)), 2, &apos;0&apos;) )</formula>
    <label>受注年月</label>
    <type>Text</type>
</CustomField>