force-app/main/default/objects/SRInfo__c/fields/Result_Difference__c.field-meta.xml
<CustomField>
    <fullName>Result_Difference__c</fullName>
    <label>締切差異</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>