force-app/main/default/objects/SRInfo__c/fields/Result_FinalWC__c.field-meta.xml
<CustomField>
    <fullName>Result_FinalWC__c</fullName>
    <description>売上実績WC + 追加原価 + 締切差異</description>
    <formula>Result_SRWC__c + Result_AdditionalCost__c + Result_Difference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>