force-app/main/default/objects/SRInfo__c/fields/Result_SRCP__c.field-meta.xml
<CustomField>
    <fullName>Result_SRCP__c</fullName>
    <label>売上実績CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>