force-app/main/default/objects/SRInfo__c/fields/Result_WCRate__c.field-meta.xml
<CustomField>
    <fullName>Result_WCRate__c</fullName>
    <description>売上実績WC / 売上実績CP</description>
    <formula>Result_SRWC__c / Result_SRCP__c</formula>
    <label>売上実績WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>