force-app/main/default/objects/SRInfo__c/fields/SalesMonth__c.field-meta.xml
<CustomField>
    <fullName>SalesMonth__c</fullName>
    <formula>IF ( ISBLANK(Result_SalesDate__c), 
    IF ( ISBLANK(Latest_SalesDate__c), 
        IF ( ISBLANK(Order_SalesDate__c), &apos;&apos;, TEXT(YEAR(Order_SalesDate__c)) &amp; &apos;/&apos; &amp;  
            LPAD(TEXT(MONTH(Order_SalesDate__c)), 2, &apos;0&apos;) ),
        TEXT(YEAR(Latest_SalesDate__c)) &amp; &apos;/&apos; &amp;  LPAD(TEXT(MONTH(Latest_SalesDate__c)), 2, &apos;0&apos;) ),
    TEXT(YEAR(Result_SalesDate__c)) &amp; &apos;/&apos; &amp;  LPAD(TEXT(MONTH(Result_SalesDate__c)), 2, &apos;0&apos;) 
)</formula>
    <label>売上年月</label>
    <type>Text</type>
</CustomField>