force-app/main/default/objects/SRInfo__c/fields/UpsertByWorkTargetIdNumber__c.field-meta.xml
<CustomField>
    <fullName>UpsertByWorkTargetIdNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>work→SR情報反映用外部キー
ワークフローの項目自動更新アクションで売報番号とJ項番号の値を文字列結合し保持する項目</description>
    <externalId>true</externalId>
    <label>work反映先特定番号（売報番号＋J項番号）</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>