force-app/main/default/objects/SRInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AffiliationName__c</columns>
    <columns>ContactPersonName__c</columns>
    <columns>Result_SRWC__c</columns>
    <columns>Result_WCRate__c</columns>
    <columns>SR_Number__c</columns>
    <columns>Subject__c</columns>
    <columns>LocationName__c</columns>
    <columns>OrderMonth__c</columns>
    <columns>SalesMonth__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OrderingSource__c</columns>
    <columns>Warning__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>