force-app/main/default/objects/SRInfo__c/listViews/SRnoanken.listView-meta.xml
<ListView>
    <fullName>SRnoanken</fullName>
    <columns>NAME</columns>
    <columns>AffiliationName__c</columns>
    <columns>ContactPersonName__c</columns>
    <columns>Result_SRWC__c</columns>
    <columns>Result_WCRate__c</columns>
    <columns>SR_Number__c</columns>
    <columns>Subject__c</columns>
    <columns>LocationName__c</columns>
    <columns>OrderMonth__c</columns>
    <columns>SalesMonth__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OrderingSource__c</columns>
    <columns>Warning__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesMonth__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <label>案件が紐づいていないSR情報</label>
</ListView>