force-app/main/default/objects/SRInfo__c/listViews/X2020_SR.listView-meta.xml
<ListView>
    <fullName>X2020_SR</fullName>
    <columns>NAME</columns>
    <columns>AffiliationName__c</columns>
    <columns>ContactPersonName__c</columns>
    <columns>Result_SRWC__c</columns>
    <columns>Result_WCRate__c</columns>
    <columns>SR_Number__c</columns>
    <columns>Subject__c</columns>
    <columns>LocationName__c</columns>
    <columns>OrderMonth__c</columns>
    <columns>SalesMonth__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OrderingSource__c</columns>
    <columns>Warning__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesMonth__c</field>
        <operation>lessOrEqual</operation>
        <value>2021/03</value>
    </filters>
    <filters>
        <field>SalesMonth__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>売上年月が2020年度以前のSR情報（売上済）</label>
</ListView>